--- a/Hash Calculator/MainWindow.xaml
+++ b/Hash Calculator/MainWindow.xaml
@@ -6,11 +6,15 @@
         <Label x:Name="lblChooseFile" Content="Choose File" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.385,-0.438"/>
         <TextBox x:Name="txtChooseFile" HorizontalAlignment="Left" Height="23" Margin="10,30,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="417" IsEnabled="False"/>
         <Button x:Name="btnChooseFile" Content="Open" HorizontalAlignment="Left" Margin="432,30,0,0" VerticalAlignment="Top" Width="75" Height="23" Click="ChooseFile_Click"/>
-        <Separator HorizontalAlignment="Left" Height="26" Margin="10,58,0,0" VerticalAlignment="Top" Width="497"/>
-        <CheckBox x:Name="chkMD5" Content="MD5" HorizontalAlignment="Left" Margin="10,84,0,0" VerticalAlignment="Top" Height="23"/>
-        <TextBox x:Name="txtMD5" HorizontalAlignment="Left" Height="23" Margin="61,82,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="446"/>
+        <Separator HorizontalAlignment="Left" Height="26" Margin="35,58,0,0" VerticalAlignment="Top" Width="472"/>
+        <CheckBox x:Name="chkMD5" Content="MD5" HorizontalAlignment="Left" Margin="10,84,0,0" VerticalAlignment="Top" Height="17" IsChecked="{Binding ElementName=chkAll, Path=IsChecked, Mode=OneWay}"/>
+        <TextBox x:Name="txtMD5" HorizontalAlignment="Left" Height="17" Margin="61,82,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="446" IsEnabled="{Binding ElementName=chkMD5, Path=IsChecked}" FontFamily="Consolas"/>
+        <CheckBox x:Name="chkSHA1" Content="SHA-1" HorizontalAlignment="Left" Margin="10,104,0,0" VerticalAlignment="Top" Height="17" IsChecked="{Binding ElementName=chkAll, Path=IsChecked, Mode=OneWay}"/>
+        <TextBox x:Name="txtSHA1" HorizontalAlignment="Left" Height="17" Margin="69,104,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="438" IsEnabled="{Binding ElementName=chkSHA1, Path=IsChecked}" FontFamily="Consolas"/>
         <Separator HorizontalAlignment="Left" Height="26" Margin="10,253,0,0" VerticalAlignment="Top" Width="499"/>
         <Button x:Name="btnCalculateHash" Content="Calculate" HorizontalAlignment="Left" Margin="432,279,0,0" VerticalAlignment="Top" Width="75" Height="23" Click="CalculateHash_Click"/>
         <ProgressBar x:Name="prgCalculateHash" HorizontalAlignment="Left" Height="23" Margin="10,279,0,0" VerticalAlignment="Top" Width="417" LargeChange="0"/>
+        <CheckBox x:Name="chkAll" Content="" HorizontalAlignment="Left" Margin="10,64,0,0" VerticalAlignment="Top"/>
+
     </Grid>
 </Window>
